Fixed error with rendering on mobile, added weather icon integration

--- a/indexStyle.css
+++ b/indexStyle.css
@@ -1,6 +1,9 @@
 .day-forecast-card{
 	background: #cccccc !important;
 }
+.weather-icon-div{
+	max-width: calc(100% - 5px);
+}
 .temp-max{
 	color: #dd7700;
 }
